<resources>
    <string name="app_name">MovieMan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_closed">Closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="error_timeout">Oops! Could not obtain data, a timeout occured</string>
    <string name="error_auth_failure">Oops! Api authentication failure</string>
    <string name="error_network">Oops! Api error</string>
    <string name="error_parser">Oops! Could not parse response</string>
    <string name="error_no_result">Oops! No result was found for requested query</string>
    <string name="poster_not_available">Poster is not available</string>
    <string name="action_refresh">Refresh</string>
    <string name="app_version">Version:</string>
    <string name="university">Bucharest Academy of\nEconomic Studies</string>
    <string name="developed_by">Designed and developed by</string>
    <string name="developers">Adrian Rusu\nAlexandru Popescu\nLiviu Rusu</string>
    <string name="title_activity_movie_details">MovieActivity</string>
    <string name="title_activity_movie_details_base">ActivityMovieDetailsBase</string>
    <string name="not_available_placeholder">NA</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_watchlist">Watchlist</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_activity_movies_list">MoviesListActivity</string>
    <string name="upcoming">Upcoming</string>
    <string name="latest">Latest</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="add_comment">Add comment</string>
    <string name="duration">Duration</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="status">Status</string>
    <string name="directed_by">Directed by</string>
    <string name="genres">Genres</string>
    <string name="overview">Overview</string>
    <string name="production_companies">Production companies</string>
    <string name="cast">Cast</string>
</resources>
