<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.learning.android.movieman.activity.AboutActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <ImageView
        android:id="@+id/image_view_about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/app_bar_top_padding"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/text_about_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_view_about_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textSize="@dimen/abc_text_size_display_2_material" />

    <TextView
        android:id="@+id/text_about_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_about_app_name"
        android:layout_centerHorizontal="true"
        android:text="@string/app_version"
        android:textSize="@dimen/abc_text_size_display_1_material" />

    <TextView
        android:id="@+id/text_about_university"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_about_app_version"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingTop="@dimen/app_bar_top_padding"
        android:text="@string/university"
        android:textSize="@dimen/abc_text_size_headline_material" />

    <TextView
        android:id="@+id/text_about_developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_about_university"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/app_bar_top_padding"
        android:text="@string/developed_by"
        android:textSize="@dimen/abc_text_size_subhead_material" />

    <TextView
        android:id="@+id/text_about_developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_about_developed_by"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/developers"
        android:textSize="@dimen/abc_text_size_title_material" />


</RelativeLayout>
