<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/text_movie_tagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/material_default_spacing"
        android:textSize="@dimen/abc_text_size_title_material" />

    <TextView
        android:id="@+id/user_comment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User comment"
        android:textColor="@android:color/darker_gray"
        android:visibility="gone" />

    <TextView
        android:id="@+id/text_user_comment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_default_spacing"
        android:text="@string/add_comment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/duration"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_movie_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/movie_duration_label"
                android:paddingLeft="@dimen/material_default_spacing"
                android:text="@string/not_available_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/text_movie_homepage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_default_spacing" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movie_budget_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/budget"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_movie_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/movie_duration_label"
                android:paddingLeft="@dimen/material_default_spacing"
                android:text="@string/not_available_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <TextView
                android:id="@+id/movie_revenue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/revenue"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_movie_revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_default_spacing"
                android:text="@string/not_available_placeholder" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_movie_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_available_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_directed_by_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directed_by"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/text_movie_directed_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingLeft="@dimen/material_default_spacing"
                android:text="@string/not_available_placeholder" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing"
        android:text="@string/genres"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_movie_genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_available_placeholder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing"
        android:text="@string/overview"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_available_placeholder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing"
        android:text="@string/production_companies"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/text_production_companies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_available_placeholder" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/material_default_spacing"
        android:text="@string/cast"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>
