<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/first_button_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/material_default_spacing"
        android:paddingTop="@dimen/material_default_spacing">

        <android.support.v7.widget.CardView
            android:id="@+id/button_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/material_default_spacing"
            android:layout_weight="1.0"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_upcoming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/upcoming"
                    android:textColor="@color/primary_text_default_material_dark" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/button_popular"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/material_default_spacing"
            android:layout_marginRight="@dimen/material_default_spacing"
            android:layout_weight="1.0"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/popular"
                    android:textColor="@color/primary_text_default_material_dark" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_button_row_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_button_row_layout"
        android:paddingBottom="@dimen/material_default_spacing">

        <android.support.v7.widget.CardView
            android:id="@+id/button_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/material_default_spacing"
            android:layout_weight="1.0"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_top_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/top_rated"
                    android:textColor="@color/primary_text_default_material_dark" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/button_latest"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginLeft="@dimen/material_default_spacing"
            android:layout_marginRight="@dimen/material_default_spacing"
            android:layout_weight="1.0"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/accentColor"
            app:cardCornerRadius="2dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:id="@+id/text_latest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:minWidth="88dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:singleLine="true"
                    android:text="@string/latest"
                    android:textColor="@color/primary_text_default_material_dark" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</LinearLayout>